Laura/lab9/parser.output
   0  $accept : %entry% $end

   1  main : expr EOF

   2  tip : TINT
   3      | TBOOL
   4      | TUNIT
   5      | TFLOAT
   6      | tip ARROW tip

   7  expr : VAR
   8       | INT
   9       | FLOAT
  10       | TRUE
  11       | FALSE
  12       | SKIP
  13       | INT_CAST
  14       | FLOAT_CAST
  15       | expr expr
  16       | LPAREN expr RPAREN
  17       | expr PLUS expr
  18       | expr MINUS expr
  19       | expr MUL expr
  20       | expr DIV expr
  21       | DEREF LOC
  22       | LOC ASGNOP expr
  23       | expr LTE expr
  24       | expr LT expr
  25       | expr SEQ expr
  26       | IF expr THEN expr ELSE expr
  27       | WHILE expr DO expr DONE
  28       | FOR LPAREN expr SEQ expr SEQ expr RPAREN expr
  29       | FUN LPAREN VAR COLON tip RPAREN ARROW expr
  30       | error

  31  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (31)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	main  goto 19
	expr  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : error .  (30)

	.  reduce 30


state 4
	expr : INT_CAST .  (13)

	.  reduce 13


state 5
	expr : FLOAT_CAST .  (14)

	.  reduce 14


state 6
	expr : INT .  (8)

	.  reduce 8


state 7
	expr : FLOAT .  (9)

	.  reduce 9


state 8
	expr : LOC . ASGNOP expr  (22)

	ASGNOP  shift 21
	.  error


state 9
	expr : VAR .  (7)

	.  reduce 7


state 10
	expr : TRUE .  (10)

	.  reduce 10


state 11
	expr : FALSE .  (11)

	.  reduce 11


state 12
	expr : SKIP .  (12)

	.  reduce 12


state 13
	expr : IF . expr THEN expr ELSE expr  (26)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 22


state 14
	expr : WHILE . expr DO expr DONE  (27)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 23


state 15
	expr : FOR . LPAREN expr SEQ expr SEQ expr RPAREN expr  (28)

	LPAREN  shift 24
	.  error


state 16
	expr : DEREF . LOC  (21)

	LOC  shift 25
	.  error


state 17
	expr : LPAREN . expr RPAREN  (16)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 26


state 18
	expr : FUN . LPAREN VAR COLON tip RPAREN ARROW expr  (29)

	LPAREN  shift 27
	.  error


state 19
	%entry% : '\001' main .  (31)

	.  reduce 31


state 20
	main : expr . EOF  (1)
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SEQ  shift 28
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	LT  shift 29
	LTE  shift 30
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	EOF  shift 35
	.  error

	expr  goto 36


state 21
	expr : LOC ASGNOP . expr  (22)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 37


state 22
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)
	expr : IF expr . THEN expr ELSE expr  (26)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SEQ  shift 28
	SKIP  shift 12
	IF  shift 13
	THEN  shift 38
	WHILE  shift 14
	FOR  shift 15
	LT  shift 29
	LTE  shift 30
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 36


state 23
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)
	expr : WHILE expr . DO expr DONE  (27)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SEQ  shift 28
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	DO  shift 39
	FOR  shift 15
	LT  shift 29
	LTE  shift 30
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 36


state 24
	expr : FOR LPAREN . expr SEQ expr SEQ expr RPAREN expr  (28)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 40


state 25
	expr : DEREF LOC .  (21)

	.  reduce 21


state 26
	expr : expr . expr  (15)
	expr : LPAREN expr . RPAREN  (16)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SEQ  shift 28
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	LT  shift 29
	LTE  shift 30
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	RPAREN  shift 41
	FUN  shift 18
	.  error

	expr  goto 36


state 27
	expr : FUN LPAREN . VAR COLON tip RPAREN ARROW expr  (29)

	VAR  shift 42
	.  error


state 28
	expr : expr SEQ . expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 43


state 29
	expr : expr LT . expr  (24)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 44


state 30
	expr : expr LTE . expr  (23)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 45


state 31
	expr : expr PLUS . expr  (17)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 46


state 32
	expr : expr MINUS . expr  (18)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 47


state 33
	expr : expr MUL . expr  (19)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 48


state 34
	expr : expr DIV . expr  (20)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 49


state 35
	main : expr EOF .  (1)

	.  reduce 1


36: shift/reduce conflict (shift 3, reduce 15) on error
36: shift/reduce conflict (shift 6, reduce 15) on INT
36: shift/reduce conflict (shift 7, reduce 15) on FLOAT
36: shift/reduce conflict (shift 8, reduce 15) on LOC
36: shift/reduce conflict (shift 9, reduce 15) on VAR
36: shift/reduce conflict (shift 10, reduce 15) on TRUE
36: shift/reduce conflict (shift 11, reduce 15) on FALSE
36: shift/reduce conflict (shift 12, reduce 15) on SKIP
36: shift/reduce conflict (shift 13, reduce 15) on IF
36: shift/reduce conflict (shift 14, reduce 15) on WHILE
36: shift/reduce conflict (shift 15, reduce 15) on FOR
36: shift/reduce conflict (shift 17, reduce 15) on LPAREN
36: shift/reduce conflict (shift 18, reduce 15) on FUN
state 36
	expr : expr . expr  (15)
	expr : expr expr .  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	INT_CAST  reduce 15
	FLOAT_CAST  reduce 15
	SEQ  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	DO  reduce 15
	DONE  reduce 15
	LT  reduce 15
	LTE  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	MUL  reduce 15
	DIV  reduce 15
	RPAREN  reduce 15
	EOF  reduce 15

	expr  goto 36


37: shift/reduce conflict (shift 3, reduce 22) on error
37: shift/reduce conflict (shift 6, reduce 22) on INT
37: shift/reduce conflict (shift 7, reduce 22) on FLOAT
37: shift/reduce conflict (shift 8, reduce 22) on LOC
37: shift/reduce conflict (shift 9, reduce 22) on VAR
37: shift/reduce conflict (shift 10, reduce 22) on TRUE
37: shift/reduce conflict (shift 11, reduce 22) on FALSE
37: shift/reduce conflict (shift 12, reduce 22) on SKIP
37: shift/reduce conflict (shift 13, reduce 22) on IF
37: shift/reduce conflict (shift 14, reduce 22) on WHILE
37: shift/reduce conflict (shift 15, reduce 22) on FOR
37: shift/reduce conflict (shift 17, reduce 22) on LPAREN
37: shift/reduce conflict (shift 18, reduce 22) on FUN
state 37
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : LOC ASGNOP expr .  (22)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	SEQ  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	DO  reduce 22
	DONE  reduce 22
	LT  reduce 22
	LTE  reduce 22
	RPAREN  reduce 22
	EOF  reduce 22

	expr  goto 36


state 38
	expr : IF expr THEN . expr ELSE expr  (26)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 50


state 39
	expr : WHILE expr DO . expr DONE  (27)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 51


state 40
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)
	expr : FOR LPAREN expr . SEQ expr SEQ expr RPAREN expr  (28)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SEQ  shift 52
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	LT  shift 29
	LTE  shift 30
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	.  error

	expr  goto 36


state 41
	expr : LPAREN expr RPAREN .  (16)

	.  reduce 16


state 42
	expr : FUN LPAREN VAR . COLON tip RPAREN ARROW expr  (29)

	COLON  shift 53
	.  error


43: shift/reduce conflict (shift 3, reduce 25) on error
43: shift/reduce conflict (shift 6, reduce 25) on INT
43: shift/reduce conflict (shift 7, reduce 25) on FLOAT
43: shift/reduce conflict (shift 8, reduce 25) on LOC
43: shift/reduce conflict (shift 9, reduce 25) on VAR
43: shift/reduce conflict (shift 10, reduce 25) on TRUE
43: shift/reduce conflict (shift 11, reduce 25) on FALSE
43: shift/reduce conflict (shift 12, reduce 25) on SKIP
43: shift/reduce conflict (shift 13, reduce 25) on IF
43: shift/reduce conflict (shift 14, reduce 25) on WHILE
43: shift/reduce conflict (shift 15, reduce 25) on FOR
43: shift/reduce conflict (shift 17, reduce 25) on LPAREN
43: shift/reduce conflict (shift 18, reduce 25) on FUN
state 43
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)
	expr : expr SEQ expr .  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SEQ  shift 28
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	LT  shift 29
	LTE  shift 30
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	THEN  reduce 25
	ELSE  reduce 25
	DO  reduce 25
	DONE  reduce 25
	RPAREN  reduce 25
	EOF  reduce 25

	expr  goto 36


44: shift/reduce conflict (shift 3, reduce 24) on error
44: shift/reduce conflict (shift 6, reduce 24) on INT
44: shift/reduce conflict (shift 7, reduce 24) on FLOAT
44: shift/reduce conflict (shift 8, reduce 24) on LOC
44: shift/reduce conflict (shift 9, reduce 24) on VAR
44: shift/reduce conflict (shift 10, reduce 24) on TRUE
44: shift/reduce conflict (shift 11, reduce 24) on FALSE
44: shift/reduce conflict (shift 12, reduce 24) on SKIP
44: shift/reduce conflict (shift 13, reduce 24) on IF
44: shift/reduce conflict (shift 14, reduce 24) on WHILE
44: shift/reduce conflict (shift 15, reduce 24) on FOR
44: shift/reduce conflict (shift 17, reduce 24) on LPAREN
44: shift/reduce conflict (shift 18, reduce 24) on FUN
state 44
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr LT expr .  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	SEQ  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	DO  reduce 24
	DONE  reduce 24
	RPAREN  reduce 24
	EOF  reduce 24

	expr  goto 36


45: shift/reduce conflict (shift 3, reduce 23) on error
45: shift/reduce conflict (shift 6, reduce 23) on INT
45: shift/reduce conflict (shift 7, reduce 23) on FLOAT
45: shift/reduce conflict (shift 8, reduce 23) on LOC
45: shift/reduce conflict (shift 9, reduce 23) on VAR
45: shift/reduce conflict (shift 10, reduce 23) on TRUE
45: shift/reduce conflict (shift 11, reduce 23) on FALSE
45: shift/reduce conflict (shift 12, reduce 23) on SKIP
45: shift/reduce conflict (shift 13, reduce 23) on IF
45: shift/reduce conflict (shift 14, reduce 23) on WHILE
45: shift/reduce conflict (shift 15, reduce 23) on FOR
45: shift/reduce conflict (shift 17, reduce 23) on LPAREN
45: shift/reduce conflict (shift 18, reduce 23) on FUN
state 45
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr LTE expr .  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	SEQ  reduce 23
	THEN  reduce 23
	ELSE  reduce 23
	DO  reduce 23
	DONE  reduce 23
	RPAREN  reduce 23
	EOF  reduce 23

	expr  goto 36


46: shift/reduce conflict (shift 3, reduce 17) on error
46: shift/reduce conflict (shift 6, reduce 17) on INT
46: shift/reduce conflict (shift 7, reduce 17) on FLOAT
46: shift/reduce conflict (shift 8, reduce 17) on LOC
46: shift/reduce conflict (shift 9, reduce 17) on VAR
46: shift/reduce conflict (shift 10, reduce 17) on TRUE
46: shift/reduce conflict (shift 11, reduce 17) on FALSE
46: shift/reduce conflict (shift 12, reduce 17) on SKIP
46: shift/reduce conflict (shift 13, reduce 17) on IF
46: shift/reduce conflict (shift 14, reduce 17) on WHILE
46: shift/reduce conflict (shift 15, reduce 17) on FOR
46: shift/reduce conflict (shift 17, reduce 17) on LPAREN
46: shift/reduce conflict (shift 18, reduce 17) on FUN
state 46
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr PLUS expr .  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	SEQ  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	DO  reduce 17
	DONE  reduce 17
	LT  reduce 17
	LTE  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	RPAREN  reduce 17
	EOF  reduce 17

	expr  goto 36


47: shift/reduce conflict (shift 3, reduce 18) on error
47: shift/reduce conflict (shift 6, reduce 18) on INT
47: shift/reduce conflict (shift 7, reduce 18) on FLOAT
47: shift/reduce conflict (shift 8, reduce 18) on LOC
47: shift/reduce conflict (shift 9, reduce 18) on VAR
47: shift/reduce conflict (shift 10, reduce 18) on TRUE
47: shift/reduce conflict (shift 11, reduce 18) on FALSE
47: shift/reduce conflict (shift 12, reduce 18) on SKIP
47: shift/reduce conflict (shift 13, reduce 18) on IF
47: shift/reduce conflict (shift 14, reduce 18) on WHILE
47: shift/reduce conflict (shift 15, reduce 18) on FOR
47: shift/reduce conflict (shift 17, reduce 18) on LPAREN
47: shift/reduce conflict (shift 18, reduce 18) on FUN
state 47
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr MINUS expr .  (18)
	expr : expr . MUL expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)

	error  shift 3
	INT_CAST  shift 4
	FLOAT_CAST  shift 5
	INT  shift 6
	FLOAT  shift 7
	LOC  shift 8
	VAR  shift 9
	TRUE  shift 10
	FALSE  shift 11
	SKIP  shift 12
	IF  shift 13
	WHILE  shift 14
	FOR  shift 15
	DEREF  shift 16
	MUL  shift 33
	DIV  shift 34
	LPAREN  shift 17
	FUN  shift 18
	SEQ  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	DO  reduce 18
	DONE  reduce 18
	LT  reduce 18
	LTE  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	RPAREN  reduce 18
	EOF  reduce 18

	expr  goto 36


48: shift/reduce conflict (shift 3, reduce 19) on error
48: shift/reduce conflict (shift 6, reduce 19) on INT
48: shift/reduce conflict (shift 7, reduce 19) on FLOAT
48: shift/reduce conflict (shift 8, reduce 19) on LOC
48: shift/reduce conflict (shift 9, reduce 19) on VAR
48: shift/reduce conflict (shift 10, reduce 19) on TRUE
48: shift/reduce conflict (shift 11, reduce 19) on FALSE
48: shift/reduce conflict (shift 12, reduce 19) on SKIP
48: shift/reduce conflict (shift 13, reduce 19) on IF
48: shift/reduce conflict (shift 14, reduce 19) on WHILE
48: shift/reduce conflict (shift 15, reduce 19) on FOR
48: shift/reduce conflict (shift 17, reduce 19) on LPAREN
48: shift/reduce conflict (shift 18, reduce 19) on FUN
state 48
	expr : expr . expr  (15)
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MUL expr  (19)
	expr : expr MUL expr .  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LTE expr  (23)
	expr : expr . LT expr  (24)
	expr : expr . SEQ expr  (25)
